<resources>
    <string name="app_name">ecir</string>
    <string name="logo">Logo</string>
    <string name="e_cir">e-CIR</string>
    <string name="entrar">Entrar</string>
    <string name="entrar_como_empresa">Entrar como Empresa</string>
    <string name="primeira_vez_aqui">Primeira vez aqui?</string>
    <string name="cadastre_se">Cadastre-se!</string>
    <string name="certificados_e_documentos">Certificados e Documentos</string>
    <string name="dados_pessoais">Dados Pessoais</string>
    <string name="username">Username</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="voltar">Voltar</string>
    <string name="profile_image_description">Imagem de perfil</string>
    <string name="label_num_inscricao">Nº de inscrição</string>
    <string name="label_nome">Nome</string>
    <string name="label_naturalidade">Naturalidade</string>
    <string name="label_nacionalidade">Nacionalidade</string>
    <string name="label_data_nascimento">Data de nascimento</string>
    <string name="label_om_emissao">OM de Emissão</string>
    <string name="n_o_h_embarques">Não há embarques!</string>
    <string name="n_o_h_registros_de_embarques">Não há registros de embarques!</string>
    <string name="pesquisar" />
    <string name="novo">Novo</string>
    <string name="configuracoes">Configurações</string>
    <string name="sair_do_app">Sair do APP</string>
    <string name="elimina_conta">Eliminar conta e todos os dados\n</string>
    <string name="contatar">Contatar suporte</string>
    <string name="nome_registro">Nome do registro</string>
    <string name="nome_embarcacao">Nome da embarcação\n</string>
    <string name="numero_inscricao">Número de inscrição\n</string>
    <string name="arqueacao">Arqueação Bruta (Potência)</string>
    <string name="local_embarque">Local de Embarque</string>
    <string name="data_embarque">Data de embarque</string>
    <string name="categoria">Categoria\n</string>
    <string name="funcao">Função\n</string>
    <string name="tipo_navegaçao">Tipo de navegação\n</string>
    <string name="novo_registro">Novo Registro de Embarque</string>
    <string name="salvar">Salvar\n</string>
    <string name="editar">Editar</string>
    <string name="tipo_navegacao">Tipo de Navegação\n</string>
    <string name="n_o_h_embarques_registrados">Não há embarques registrados</string>
    <string name="registro_de_embarques">Registro de Embarques</string>
    <string name="editar_embarque" />
    <string name="deletar_embarque" />
    <string name="editar_registro">Editar Registro</string>
    <string name="detalhes_embarque">"Detalhes "</string>
    <string name="num_inscricao">Número de inscrição</string>
    <string name="nome_do_certificado">Nome do Certificado</string>
    <string name="ver">Ver</string>
    <string name="menu">menu</string>
    <string name="tipo_de_navega_o_detalhe">Tipo de Navegação Detalhe</string>
    <string name="fun_o_detalhe">Função Detalhe</string>
    <string name="categoria_detalhe">Categoria Detalhe</string>
    <string name="local_do_embarque">Local do Embarque</string>
    <string name="arquea_o_detalhe">Arqueação Detalhe</string>
    <string name="_001234">001234</string>
    <string name="nome_da_embarca_o">Nome da Embarcação</string>
    <string name="_123456">123456</string>
    <string name="_01_01_2024">01/01/2024</string>
    <string name="salvar_altera_es">Salvar Alterações</string>
    <string name="calend_rio_de_embarques">Calendário de Embarques</string>
</resources>