<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C9FFFFFF">

    <!-- Toolbar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:background="#0B274E"
        android:padding="10dp"
        android:gravity="center_vertical">

        <!-- Ícone de voltar -->
        <ImageView
            android:layout_width="50dp"
            android:layout_height="56dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:contentDescription="@string/voltar"
            android:focusable="true"
            android:src="@drawable/seta" />

        <!-- Título -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/novo_registro"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

    </LinearLayout>

    <!-- Conteúdo principal -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="0dp"
        android:orientation="vertical"
        android:padding="16dp">


        <!-- Nº de inscrição -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="username"
            android:background="@drawable/rounded_corners"
            android:hint="@string/nome_registro"
            android:inputType="number"
            android:padding="14dp" />

        <!-- Nome -->

        <!-- Naturalidade -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="name"
            android:background="@drawable/rounded_corners"
            android:hint="@string/nome_embarcacao"
            android:inputType="textPersonName"
            android:padding="14dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="addressLocality"
            android:background="@drawable/rounded_corners"
            android:hint="@string/numero_inscricao"
            android:inputType="text"
            android:padding="14dp" />

        <!-- Nacionalidade -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="countryName"
            android:background="@drawable/rounded_corners"
            android:hint="@string/arqueacao"
            android:inputType="text"
            android:padding="14dp" />

        <!-- Data de nascimento -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="birthday"
            android:background="@drawable/rounded_corners"
            android:hint="@string/local_embarque"
            android:inputType="date"
            android:padding="14dp" />

        <!-- OM de Emissão -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="organization"
            android:background="@drawable/rounded_corners"
            android:hint="@string/data_embarque"
            android:inputType="text"
            android:padding="14dp" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="organization"
            android:background="@drawable/rounded_corners"
            android:hint="@string/categoria"
            android:inputType="text"
            android:padding="14dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="organization"
            android:background="@drawable/rounded_corners"
            android:hint="@string/funcao"
            android:inputType="text"
            android:padding="14dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="organization"
            android:background="@drawable/rounded_corners"
            android:hint="@string/tipo_navegaçao"
            android:inputType="text"
            android:padding="14dp" />

        <Button
            android:id="@+id/btnSalvarCertificado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="organization"
            android:layout_marginTop="30dp"
            android:text="Salvar"
            android:backgroundTint="#0B274E"
            android:textColor="#FFFFFF"
            android:padding="10dp"
            android:textSize="20sp"
            android:drawableLeft="@drawable/salvar"
            android:gravity="center"/>

    </LinearLayout>



</RelativeLayout>
