<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1A2A4E"
    android:gravity="center"
    android:padding="16dp">

    <!-- Logo da âncora -->
    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logoecir" />

    <!-- Caixa de login -->

    <!-- Seção de cadastro -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="234dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_background"
        android:elevation="2dp"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:minHeight="48dp"
            android:hint="@string/username"
            android:padding="10dp"
            android:textColor="#000"
            android:textColorHint="#666" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:minHeight="48dp"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#000"
            android:textColorHint="#666" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#1A2A4E"
            android:text="@string/login"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/forgotPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/esqueceu_a_senha"
            android:textColor="#1A2A4E"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/registerPromptTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/primeira_vez_aqui"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:backgroundTint="#D6D6D6"
        android:text="@string/cadastre_se"
        android:textColor="#000000" />
</LinearLayout>